# cortex.cpp

./: .gitignore  .gitmodules  404.html  BUILDING.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_temp.md  audio.md  config.json  docker-compose.yml  function-calling.py  index.html  init.cpp  install.bat  install.sh  install_deps.sh  main.cc  main.py  package.json  sitemap.xml  start_nitro.sh  temp.yaml  tsconfig.json
core/inference_backend/: .gitignore  CMakeLists.txt  README.md
cortex-cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  addon.cc  index.js  install.bat  install.sh  main.cc  package.json
cortex-cpp/binding/: index.d.ts
cortex-cpp/common/: base.h
cortex-cpp/context/: whisper_server_context.h
cortex-cpp/controllers/: audio.cc  health.cc  llamaCPP.cc  llamaCPP.h  server.cc  server.h
cortex-cpp/cortex-common/: EngineI.h
cortex-cpp/cortex-cpp-deps/: CMakeLists.txt  README.md
cortex-cpp/nitro-node/: README.md  package.json  postinstall.js  rollup.config.ts
cortex-cpp/nitro_deps/: CMakeLists.txt
cortex-cpp/utils/: cortex_utils.h  dylib.h  nitro_utils.h
engine/: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cortex_openapi.h.in  install.bat  install.sh  install_deps.sh  main.cc  package.json  vcpkg-configuration.json  vcpkg.json
engine/binding/: index.d.ts  index.js
engine/cli/: CMakeLists.txt  command_line_parser.cc  command_line_parser.h  main.cc
engine/cmake/: c-ares.cmake  cli11.cmake  curl.cmake  drogon.cmake  eventpp.cmake  gtest.cmake  indicators.cmake  inja.cmake  jsoncpp.cmake  lfreist-hwinfo.cmake  libarchive.cmake  minizip.cmake  nlohmann-json.cmake  openssl.cmake  sqlitecpp.cmake  tabulate.cmake  trantor.cmake  utils.cmake  yaml-cpp.cmake  zlib.cmake
engine/commands/: chat_cmd.cc  chat_cmd.h  chat_completion_cmd.cc  chat_completion_cmd.h  cmd_info.cc  cmd_info.h  cortex_upd_cmd.cc  cortex_upd_cmd.h  cortex_upd_server_cmd.cc  cortex_upd_server_cmd.h  engine_get_cmd.cc  engine_get_cmd.h  engine_init_cmd.cc  engine_init_cmd.h  engine_install_cmd.cc  engine_install_cmd.h  engine_list_cmd.cc  engine_list_cmd.h  engine_uninstall_cmd.cc  engine_uninstall_cmd.h  model_alias_cmd.cc  model_alias_cmd.h  model_del_cmd.cc  model_del_cmd.h  model_get_cmd.cc  model_get_cmd.h  model_import_cmd.cc  model_import_cmd.h  model_list_cmd.cc  model_list_cmd.h  model_pull_cmd.cc  model_pull_cmd.h  model_start_cmd.cc  model_start_cmd.h  model_status_cmd.cc  model_status_cmd.h  model_stop_cmd.cc  model_stop_cmd.h  model_upd_cmd.cc  model_upd_cmd.h  (+16 more)
engine/common/: additional_message.h  api_server_configuration.h  assistant.h  assistant_code_interpreter_tool.h  assistant_file_search_tool.h  assistant_function_tool.h  assistant_tool.h  base.h  download_event.h  download_task.h  download_task_queue.h  engine_servicei.h  event.h  file.h  hardware_common.h  hardware_config.h  json_serializable.h  last_error.h  message.h  message_attachment.h  message_attachment_factory.h  message_content.h  message_content_factory.h  message_content_image_file.h  message_content_image_url.h  message_content_refusal.h  message_content_text.h  message_delta.h  message_incomplete_detail.h  message_role.h  message_status.h  model_metadata.h  model_tokenizer.h  required_action.h  run.h  run_step.h  run_step_delta.h  run_step_detail.h  run_usage.h  thread.h  (+6 more)
engine/config/: chat_template_renderer.h  gguf_parser.cc  gguf_parser.h  model_config.h  remote_template.h  yaml_config.cc  yaml_config.h
engine/controllers/: assistants.cc  assistants.h  command_line_parser.cc  command_line_parser.h  configs.cc  configs.h  engines.cc  engines.h  events.cc  events.h  files.cc  files.h  hardware.cc  hardware.h  health.cc  messages.cc  messages.h  models.cc  models.h  processManager.cc  processManager.h  process_manager.cc  process_manager.h  runs.cc  runs.h  server.cc  server.h  swagger.cc  swagger.h  threads.cc  threads.h
engine/cortex-common/: EngineI.h  cortexpythoni.h  local_enginei.h  python_enginei.h  remote_enginei.h
engine/cortex-cpp-deps/: CMakeLists.txt
engine/database/: database.h  engines.cc  engines.h  file.cc  file.h  hardware.cc  hardware.h  hardwares.cc  hardwares.h  models.cc  models.h  runs.cc  runs.h
engine/e2e-test/: cortex-llamacpp-e2e-nightly.py  local_test.py  main-harry.py  main.py  requirements.txt  test_api_cortexso_hub_llamacpp_engine.py  test_api_docker.py  test_api_engine.py  test_api_engine_get.py  test_api_engine_install.py  test_api_engine_install_nightly.py  test_api_engine_list.py  test_api_engine_uninstall.py  test_api_engine_update.py  test_api_model.py  test_api_model_alias.py  test_api_model_delete.py  test_api_model_get.py  test_api_model_import.py  test_api_model_list.py  test_api_model_pull_direct_url.py  test_api_model_start.py  test_api_model_start_stop.py  test_api_model_stop.py  test_api_model_update.py  test_cli_engine_get.py  test_cli_engine_install.py  test_cli_engine_install_nightly.py  test_cli_engine_list.py  test_cli_engine_uninstall.py  test_cli_model.py  test_cli_model_delete.py  test_cli_model_import.py  test_cli_model_pull_cortexso_with_selection.py  test_cli_model_pull_direct_url.py  test_cli_model_pull_from_cortexso.py  test_cli_model_pull_hugging_face_repository.py  test_cli_server_start.py  test_cortex_update.py  test_create_log_folder.py  (+1 more)
engine/exceptions/: failed_curl_exception.h  failed_init_curl_exception.h  failed_open_file_exception.h  malformed_url_exception.h
engine/extensions/: template_renderer.cc  template_renderer.h
engine/migrations/: db_helper.h  migration_helper.cc  migration_helper.h  migration_manager.cc  migration_manager.h  schema_version.h
engine/repositories/: assistant_fs_repository.cc  assistant_fs_repository.h  file_fs_repository.cc  file_fs_repository.h  message_fs_repository.cc  message_fs_repository.h  run_sqlite_repository.cc  run_sqlite_repository.h  thread_fs_repository.cc  thread_fs_repository.h
engine/services/: assistant_service.cc  assistant_service.h  (+27 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
(+1724 files in other folders)
